LaTeX template: Add pdflang to hypersetup if lang is set.
Closes #5443.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -205,6 +205,9 @@ $endif$
 $if(author-meta)$
   pdfauthor={$author-meta$},
 $endif$
+$if(lang)$
+  pdflang={$lang$},
+$endif$
 $if(subject)$
   pdfsubject={$subject$},
 $endif$
